--- a/standalone/roles/cp/cve_cce/arm64/tasks/main.yml
+++ b/standalone/roles/cp/cve_cce/arm64/tasks/main.yml
@@ -1,12 +1,7 @@
 ---
-- name: Get home dir path
-  become: false
-  shell: "echo $HOME"
-  register: home_dir_path
-
 - name: Copy security.bin
   copy:
-    src: "{{ home_dir_path.stdout }}/cp-deployment/edge/security.bin"
+    src: "~/cp-deployment/edge/security.bin"
     dest: "security.bin"
     mode: "0755"
 
