--- a/standalone/roles/cp/cve_cce/amd64/tasks/main.yml
+++ b/standalone/roles/cp/cve_cce/amd64/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Copy security.bin
   copy:
-    src: "~/cp-deployment/security.bin"
+    src: "{{ lookup('env', 'HOME') }}/cp-deployment/security.bin"
     dest: "security.bin"
     mode: "0755"
 
